
Assessments from previous curriculum years can now be applied to the
MarkBook accounting for the progression of students to the next stage
or next course correctly.

Fix to yeargroup matrix, creating a new perms group was failing.

Linked the stats to a profile with a new field in the db table and
added four fields for threshold or boundary values to the statvalues
table.


Version ClaSS-0.9.4 release (2009/09/16)
-----------------------------------------

The report db table now has academic year as a field (the upgrade
patch will fill this based on the date of the report).

A fix to emailing comments when subject teachers' option was checked.

The list_responsible_users will now check for boarder status and
include teachers who have perms for the residence group.

New config option can exclude/include the guardians of boarders form
receiving comment and incident emails (must be 'yes' for previous
functionality to be maintained).


Version ClaSS-0.9.3 release (2009/09/14)
-----------------------------------------

New merit system including new db table. Extra helper window for
merit_adder.php in the InfoBook.

Extra config option to define the registration group type: either form
(the default) or an other community type (eg. 'reg' for registration
group, 'academic' for academic groups').

Slight change to javascript functions to make use of sidtable uniform
across the books and to relegate marktabe to a css class. The
add/remove extrafields functions also generalised.

New decorate option instigated by sidTable init to add onhover content
to each student cell in the table.

New community type of 'house' allowed.

Have removed the diagram js which was deprecated long ago.


Version ClaSS-0.9.2 release (2009/09/01)
-----------------------------------------

Fix to the list_admin_groups so deprecated groups don't get in the
way.

A chart icon added which accompanies a new js clicktoAction() option
for action=chart. This works similar to print but calls